--- a/views/shop.hbs
+++ b/views/shop.hbs
@@ -1,27 +1,10 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>{{pageTitle}}</title>
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/forms.css" />
-    <link rel="stylesheet" href="/css/product.css" />
-  </head>
-  <body>
-    <header class="main-header">
-      <nav class="main-header__nav">
-        <ul class="main-header__item-list">
-          <li>
-            <a href="/">Shop</a>
-            <a href="/admin/add-product">Add Product</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <div class="grid">
+<main>
+  {{#if hasProducts}}
+    <div class="grid">
+      {{#each prods}}
         <article class="card product-item">
           <header class="card__header">
-            <h1 class="product__title">Product Title 1</h1>
+            <h1 class="product__title"> {{this.title}} </h1>
           </header>
           <div class="card__image">
             <img
@@ -38,7 +21,9 @@
             <button class="btn">Add to cart</button>
           </div>
         </article>
-      </div>
-    </main>
-  </body>
-</html>
+      {{/each}}
+    </div>
+  {{else}}
+    <h1>no products founds, please try it later</h1>
+  {{/if}}
+</main>
