--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,6 +1,22 @@
 <%- include('../includes/head.ejs') %>
-    </head>
+</head>
 
-    <body>
-        <%- include('../includes/navigation.ejs') %>
-        <%- include('../includes/end.ejs') %>
+<body>
+    <%- include('../includes/navigation.ejs') %>
+    <main>
+        <% if (product.length > 0 ) { %>
+            <ul>
+                <% product.forEach(p => { %>
+                    <li> <p><%= p.productData.title %> (<%= p.qty %>)</p> </li>
+                    <form action="/cart-delete-item" method="POST">
+                        <input type="hidden" value="<%= p.productData.id %>"  name="productId">
+                        <button type="submit" class="btn">Delete Item</button>
+                    </form>
+                <% }); %>
+            </ul>   
+        <% } else { %>
+            <h1>No Product in Cart!</h1>
+        <% } %>
+    </main>
+    <%- include('../includes/end.ejs') %>
+</body>
